apps/wallet-bff/httproute.yaml
# SPDX-FileCopyrightText: 2026 Digg - Agency for Digital Government
#
# SPDX-License-Identifier: EUPL-1.2
#
# Replaces the nginx LB used in docker-compose with the Cilium Gateway.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallet-bff
spec:
  parentRefs:
    - name: dev-local
      namespace: default
      sectionName: https
  hostnames:
    - wallet-bff.dev.local
  rules:
    - backendRefs:
        - name: wallet-bff
          port: 8088
